Bug 128776 - EDITING Ctrl-drag of Writer table moves the table instead of copying
Summary: EDITING Ctrl-drag of Writer table moves the table instead of copying
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-11-13 12:36 UTC by NISZ LibreOffice Team
Modified: 2019-11-19 11:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Writer 6.3 and master (120.78 KB, image/png)
2019-11-13 12:37 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-13 12:36:57 UTC
Description:
When a table in Writer is Ctrl-dragged it should copy the table, but in current master it is moved.

Steps to Reproduce:
    1. Create a few empty paragraphs in Writer and insert a table
    2. Select the whole table and Ctrl-drag it a few paragraphs lower

Actual Results:
The table is moved

Expected Results:
The table should be copied


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha1+ (x64)
Build ID: f07ac6d2d46cf9a86577d2622ce9b7c15887ac39
CPU threads: 8; OS: Windows 10.0 Build 17134; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Does not happen in:
Version: 6.3.0.4 (x64)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-11-13 12:37:37 UTC
Created attachment 155785 [details]
Screenshot of the problem in Writer 6.3 and master
Comment 2 Xisco Faulí 2019-11-13 14:21:10 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/82579/1

Regression from the commit 7fe64353dc9950e19182a59a486a1ecac27cf98e
(tdf#84806 Writer: drag and drop selected tables, don't empty).
Comment 3 Commit Notification 2019-11-13 15:30:27 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4b472a218cbde432659cd4d70ddf47dd1d1619e

tdf#128776 Writer: fix Ctrl + drag and drop table copy

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-11-19 11:57:35 UTC
Verified in

Version: 6.4.0.0.beta1+
Build ID: 1987c98926a85a483a32ea78e460e563a6ea4705
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!