tdf#128776 Writer: fix Ctrl + drag and drop table copy

Regression from the commit 7fe64353dc9950e19182a59a486a1ecac27cf98e
(tdf#84806 Writer: drag and drop selected tables, don't empty).

Change-Id: I9061b80dd8fab29aa5ec74655dc6c3f7686a91ee