sw/source/uibase/dochdl/swdtflvr.cxx
@@ -3696,7 +3696,7 @@ bool SwTransferable::PrivateDrop( SwWrtShell& rSh, const Point& rDragPt,
     bool bSttWrd = false;
     bool bSttPara = false;
     bool bTableSel = false;
-    bool bTableWholeSel = false;
+    bool bTableMove = false;
     bool bFrameSel = false;
 
     SwWrtShell& rSrcSh = *GetShell();
@@ -3762,8 +3762,8 @@ bool SwTransferable::PrivateDrop( SwWrtShell& rSh, const Point& rDragPt,
     if( rSrcSh.IsTableMode() )
     {
         bTableSel = true;
-        if ( rSrcSh.HasWholeTabSelection() )
-            bTableWholeSel = true;
+        if ( bMove && rSrcSh.HasWholeTabSelection() )
+            bTableMove = true;
     }
     else if( rSrcSh.IsSelFrameMode() || rSrcSh.IsObjSelected() )
     {
@@ -3937,7 +3937,7 @@ bool SwTransferable::PrivateDrop( SwWrtShell& rSh, const Point& rDragPt,
             }
         }
     }
-    else if ( bRet && bTableWholeSel )
+    else if ( bRet && bTableMove )
     {
         SfxDispatcher* pDispatch = rSrcSh.GetView().GetViewFrame()->GetDispatcher();
         pDispatch->Execute(FN_TABLE_DELETE_TABLE, SfxCallMode::SYNCHRON);
